--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mister-bitcoin",
   "version": "0.1.0",
-  "homepage": "https://nufar87.github.io/mister-bitcoin",
+  "homepage": "https://EllahT.github.io/nufars_mister_bitcoin",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
